--- a/Models/requirements.txt
+++ b/Models/requirements.txt
@@ -24,13 +24,13 @@ Keras-Preprocessing==1.1.2
 libclang==18.1.1
 Markdown==3.6
 MarkupSafe==2.1.5
-mkl-fft @ file:///C:/b/abs_19i1y8ykas/croot/mkl_fft_1695058226480/work
-mkl-random @ file:///C:/b/abs_edwkj1_o69/croot/mkl_random_1695059866750/work
+# mkl-fft @ file:///C:/b/abs_19i1y8ykas/croot/mkl_fft_1695058226480/work
+# mkl-random @ file:///C:/b/abs_edwkj1_o69/croot/mkl_random_1695059866750/work
 mkl-service==2.4.0
 ml-dtypes==0.2.0
 numpy @ file:///C:/b/abs_c1ywpu18ar/croot/numpy_and_numpy_base_1708638681471/work/dist/numpy-1.26.4-cp310-cp310-win_amd64.whl#sha256=ebb5aa2b36d8afa5ec3231c19e5a1fc75b6d85e7db483f0fb9e77dad58469977
 oauthlib==3.2.2
-opencv-python==4.9.0.80
+opencv-python==4.9.0.8
 opt-einsum==3.3.0
 packaging==24.0
 protobuf==3.19.6
